libs/libxslt/tests/exslt/saxon/eval.2.err
XPath error : Invalid expression
###
^
XPath error : Invalid expression
xmlXPathCompiledEval: evaluation failed
runtime error: file ./eval.2.xsl line 11 element value-of
XPath evaluation returned no result.
